# readlater

./: .gitignore  Cargo.toml  FUNDING.yml  README.md  justfile
.github/workflows/: lint.yaml  release-webext.yaml
pkg/localdb/: Cargo.toml
pkg/localdb/migrations/: 20250205102710_init.sql
pkg/localdb/src/: db.rs  error.rs  item.rs  kv.rs  kv_config.rs  lib.rs
pkg/localdb/src/model/: author.rs  image.rs  item.rs  mod.rs  video.rs
pkg/pocket/: Cargo.toml
pkg/pocket/migrations/: 20250205102710_init.sql
pkg/pocket/src/: auth.rs  error.rs  item.rs  lib.rs  modify.rs  req.rs  retrieve.rs
pkg/pocket/src/db/: mod.rs
pkg/pocket/src/snapshots/: pocket__modify__test__add_tags.snap  pocket__modify__test__add_url_request.snap  pocket__modify__test__archive_item.snap  pocket__modify__test__clear_tags.snap  pocket__modify__test__delete_item.snap  pocket__modify__test__favorite_item.snap  pocket__modify__test__readd_item.snap  pocket__modify__test__tag_delete.snap  pocket__modify__test__tag_rename.snap  pocket__modify__test__unfavorite_item.snap  pocket__retrieve__test__get_options.snap  pocket__retrieve__test__get_options_default.snap
pkg/util/: Cargo.toml
pkg/util/src/: der.rs  lib.rs  ser.rs
src/: config.rs  der.rs  lib.rs  main.rs  ser.rs
src/native_host/: install.rs  mod.rs
src/pocket/: item.rs  mod.rs  retrieve.rs
src/proto_handler/: mod.rs
webext/: amo_metadata.json  background.js  build.ts  manifest.json
