[package]
name = "getpocket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
serde_json = "1.0.138"
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
url = {version = "2.5.4", features = ["serde"]}
url_serde = "0.2.0"
reqwest = { version = "0.12.12", features = ["json"] }
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
