[package]
name = "readlater"
version = "0.1.0"
edition = "2021"

[dependencies]
url = {version = "2.5.4", features = ["serde"]}
pocket = {path = "pkg/pocket"}

anyhow = "1.0.95"
dotenv = "0.15.0"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
open = "5.3.2"
native_messaging = "0.1.1"
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "6.0.0"

[workspace]
members = [
    "pkg/pocket", "pkg/util",
]

[workspace.dependencies]
thiserror = "2.0.11"
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
url = {version = "2.5.4", features = ["serde"]}
reqwest = { version = "0.12.12", features = ["json"] }
insta = { version = "1.42.1", features = ["json"]}
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "derive", "macros", "migrate", "uuid", "chrono"]}
tokio = { version = "1", features = ["full"] }
