[package]
name = "readlater"
version = "0.1.0"
edition = "2021"

[dependencies]
url = {version = "2.5.4", features = ["serde"]}
pocket = { path = "pkg/pocket" }
localdb = { path = "pkg/localdb" }

anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
open = "5.3.2"
native_messaging = "0.1.1"
serde_json = "1.0.139"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace]
members = [ "pkg/localdb",
    "pkg/pocket", "pkg/util",
]

[workspace.dependencies]
thiserror = "2.0.11"
serde_json = "1.0.139"
serde = { version = "1.0", features = ["derive"] }
url = {version = "2.5.4", features = ["serde"]}
reqwest = { version = "0.12.12", features = ["json"] }
insta = { version = "1.42.1", features = ["json"]}
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "derive", "macros", "migrate", "uuid", "chrono"]}
tokio = { version = "1", features = ["full"] }
itertools = "0.14.0"
